2008-02-01  Satoshi Nakagawa <artension@gmail.com>

	Changed the report dialog of SACrashReporter.

==== LimeChat 0.15 ====

2008-01-28  Satoshi Nakagawa <artension@gmail.com>

	Turned back the quitting message.

2008-01-28  Satoshi Nakagawa <artension@gmail.com>

	Stopped periodical GC sweeps.

2008-01-28  Satoshi Nakagawa <artension@gmail.com>

	Changed the quitting confirmation message to "Are you sure you want to quit?".

2008-01-28  Satoshi Nakagawa <artension@gmail.com>

	Commented the end of who message, "Members list has been initialized".
	Now comboboxes shows all choices at once.

==== LimeChat 0.14.4 ====

2008-01-26  Satoshi Nakagawa <artension@gmail.com>

	Added servers to the server list.
	Fixed a bug, disconnect menu didn't work while connecting.
	Fixed a bug, cancel reconnect menu should be disabled while connecting for the first time.

2008-01-24  Satoshi Nakagawa <artension@gmail.com>

	Added '%-9n' support for nick format.

2008-01-24  Satoshi Nakagawa <artension@gmail.com>

	Improved implementation of custom cells in table views to watch copyWithZone.

2008-01-24  Satoshi Nakagawa <artension@gmail.com>

	Added ISO-8859-1 support.

2008-01-24  Satoshi Nakagawa <artension@gmail.com>

	Tweaked the message parser to make sure to parse prefix better.

2008-01-22  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, NSCell in NSTableView should be aware of copy in ObjC level.

2008-01-22  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, 'privmsg' and 'notice' type pastes should be sent quickly after pushing the send button.

2008-01-20  Satoshi Nakagawa <artension@gmail.com>

	Made sorting nicks for auto completion stable.

==== LimeChat 0.14.3 ====

2008-01-17  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, the selected item in the server tree should be initialized.

2008-01-17  Satoshi Nakagawa <artension@gmail.com>

	Changed to allow '@' in nickname.

2008-01-15  Satoshi Nakagawa <artension@gmail.com>
